[project]
name = "public-opinion"
version = "0.1.0"
description = "Opinion monitoring jobs and admin UI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "grlibs @ git+ssh://git@github.com/gaorongvc/grlibs.git",
    "jinja2",
    "pymongo",
    "python-dotenv",
    "python-multipart",
    "requests",
    "retry",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
